--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "private": true,
-  "name": "ecma402-datetime-style",
-  "description": "DateTimeFormat styles proposal for ECMA402",
-  "keywords": [
-    "tc39",
-    "javascript",
-    "ecmascript",
-    "spec",
-    "ecma402"
-  ],
-  "version": "1.0.0-pre",
-  "author": "Zibi Braniecki <zibi@braniecki.net>",
-  "license": "WTFPL",
-  "repository": "zbraniecki/proposal-ecma402-datetime-style",
+  "name": "proposal-ecma402-datetime-style",
+  "version": "0.1",
+  "description": "ECMAScript date/time style proposal",
+  "repository": "tc39/proposal-ecma402-datetime-style",
+  "author": "Ecma TC39",
+  "license": "SEE LICENSE IN https://tc39.github.io/ecma262/#sec-copyright-and-software-license",
+  "homepage": "https://tc39.github.io/proposal-ecma402-datetime-style/",
   "scripts": {
-    "spec": "ecmarkup spec.html out/index.html",
-    "watch": "ecmarkup --watch spec.html out/index.html"
+    "build": "[ -d out ] || mkdir out && ecmarkup spec.html out/index.html"
+  },
+  "dependencies": {
+    "ecmarkup": "^3.12.0"
   },
   "devDependencies": {
-    "ecmarkup": "^3.3.1"
+    "@alrra/travis-scripts": "^3.0.0"
   }
 }
